--- a/spa/Teoria_de_control_practica.ipynb
+++ b/spa/Teoria_de_control_practica.ipynb
@@ -39,7 +39,7 @@
     "\\begin{align*}\n",
     "E &= (SP - PV) \\\\\n",
     "&= (200 ºC - 155 ºC)\\\\ \n",
-    "&= 45 ºC\n",
+    "&= 45  \degree C\n",
     "\\end{align*}\n",
     "    $$\n",
     "Recuerde que el error será *positivo* cuando la temperatura sea menor que el set point, *PV < SP* .\n",
