--- a/spa/Teoria_de_control_practica.ipynb
+++ b/spa/Teoria_de_control_practica.ipynb
@@ -38,8 +38,8 @@
     " $$\n",
     "\\begin{align*}\n",
     "E &= (SP - PV) \\\\\n",
-    "&= (200 ºC - 155 ºC)\\\\ \n",
-    "&= 45 ºC\n",
+    "&= (200 ^\circ C - 155 ^\circ C)\\\\ \n",
+    "&= 45 ^\circ C\n",
     "\\end{align*}\n",
     "    $$\n",
     "Recuerde que el error será *positivo* cuando la temperatura sea menor que el set point, *PV < SP* .\n",
