Poniendo bien el símbolo de grados

--- a/spa/Teoria_de_control_practica.ipynb
+++ b/spa/Teoria_de_control_practica.ipynb
@@ -35,13 +35,13 @@
     "E = SP - PV\n",
     "$$\n",
     "En el ejemplo anterior \n",
-    " $$\n",
+    "$$\n",
     "\\begin{align*}\n",
     "E &= (SP - PV) \\\\\n",
-    "&= (200 ^\circ C - 155 ^\circ C)\\\\ \n",
-    "&= 45 ^\circ C\n",
+    "&= (200 ^\\circ C - 155 ^\\circ C)\\\\ \n",
+    "&= 45 ^\\circ C\n",
     "\\end{align*}\n",
-    "    $$\n",
+    "$$\n",
     "Recuerde que el error será *positivo* cuando la temperatura sea menor que el set point, *PV < SP* .\n",
     "\n",
     "## Control On/Off\n",
