Empezado el control proporcional

--- a/spa/Teoria_de_control_practica.ipynb
+++ b/spa/Teoria_de_control_practica.ipynb
@@ -175,8 +175,14 @@
     "Corresponde a una banda de temperatura situada por debajo del SP a lo largo de la cual, la potencia de salida variará proporcionalmente al error (SP-PV), disminuyendo cuanto más cercana sea la temperatura al SP.\n",
     "Internamente el controlador realizará el cálculo del porcentaje de salida *Out* mediante la siguiente fórmula:\n",
     "$$\n",
-    "Out = [100\\% * \\frac{E}{banda}]\\\\\n",
-    "banda = Pb * \\frac{SP}{100}\\\\\n",
+    "Out = [100\\% * \\frac{E}{banda}] \n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "banda = Pb * \\frac{SP}{100}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
     "E = (SP - PV)\n",
     "$$\n",
     "\n",
