--- a/spa/Teoria_de_control_practica.ipynb
+++ b/spa/Teoria_de_control_practica.ipynb
@@ -122,7 +122,7 @@
     "\n",
     "En el ejemplo anterior del control On/Off, el relé del mando de calentamiento estará activado 100%, entregando el máximo de potencia al horno o bien desactivado sin entregar potencia.\n",
     "\n",
-    "El controlador proporcional entrega una potencia que varía en forma gradual entre 0 y 100% según se requiera y en forma proporcional al error (SP-PV).\n",
+    "Un controlador proporcional entrega una potencia que varía en forma gradual entre 0 y 100% según se requiera y en forma proporcional al error (SP-PV).\n",
     "\n",
     "Lo más natural para entregar una potencia que varia de 0% a 100% en forma continua seria usar un horno a petróleo o gas y que el control module la potencia mediante la llave de paso del combustible. La llave cerrada seria 0% de potencia y la llave totalmente abierta seria 100%.\n",
     "\n",
@@ -132,13 +132,17 @@
     "\n",
     "Afortunadamente es posible modular de 0% a 100% la potencia que recibe un horno eléctrico mediante el mismo contactor que se usaría para un control on/off.\n",
     "\n",
-    "La idea es modular el tiempo de activación del contactor durante un lapso de tiempo fijo tc, llamado **tiempo de ciclo**, menor al tiempo característico de respuesta del horno de modo que el horno reciba finalmente un promedio de la potencia.\n",
+    "La idea es modular el tiempo de activación del contactor durante un lapso de tiempo fijo **tc**, llamado **tiempo de ciclo**, menor al tiempo característico de respuesta del horno de modo que el horno reciba finalmente un promedio de la potencia.\n",
     "\n",
     "Para ilustrar esta técnica conocida como modulación por ancho de pulso (**PWM pulse width modulation**) recurrimos al siguiente ejemplo:\n",
     "\n",
     "`Suponiendo que un horno posee un tiempo de respuesta de 1 minuto. Al aplicarle pulsos de calentamiento periódicos de 4 segundos, modulados en duración, el horno experimentará un calentamiento proporcional al promedio de tiempo que ha estado activado, sin que su temperatura siga las fluctuaciones de 4 segundos con que se aplica la potencia.`\n",
+    "\n",
+    "\n",
     "`Supongamos que nuestro horno funciona con un calefactor de 1000W, si se requiere una potencia de 500W, equivalente a 50% de la total, entonces se activa 2 segundos el relé y se desactiva otros 2, para luego empezar otro ciclo.`\n",
+    "\n",
     "`El efecto neto será que el horno recibe 50% de la potencia pero la temperatura no fluctúa al ritmo del tiempo de ciclo pues este es menor al tiempo de respuesta del horno.`\n",
+    "\n",
     "`Siguiendo con el ejemplo, si hace falta 250W, es decir 25% de la potencia basta con tener 1 segundo activado el relé y 3 segundos desactivado.`\n",
     "\n",
     "Para sistemas típicos el tiempo de ciclo se ajusta entre 1 y 200 segundos según sea el caso.\n",
@@ -160,7 +164,6 @@
    "source": [
     "## Control Proporcional\n",
     "\n",
-    "Control proporcional\n",
     "\n",
     "Ya se menciono que el controlador proporcional entrega una potencia que varía en forma proporcional al error (SP-PV).\n",
     "Para poner en marcha un controlador proporcional se deben fijar los siguientes parámetros:\n",
@@ -171,11 +174,13 @@
     "\n",
     "Por supuesto no hace falta definir el tiempo de ciclo si se va a usar una válvula motorizada como mecanismo de control.\n",
     "\n",
-    "La banda proporcional Pb se programa en el controlador como un porcentaje del SP.\n",
+    "La **banda proporcional, Pb** se programa en el controlador como un porcentaje del SP.\n",
+    "\n",
     "Corresponde a una banda de temperatura situada por debajo del SP a lo largo de la cual, la potencia de salida variará proporcionalmente al error (SP-PV), disminuyendo cuanto más cercana sea la temperatura al SP.\n",
+    "\n",
     "Internamente el controlador realizará el cálculo del porcentaje de salida *Out* mediante la siguiente fórmula:\n",
     "$$\n",
-    "Out = [100\\% * \\frac{E}{banda}] \n",
+    "Out\\% = [100\\% * \\frac{E}{banda}] \n",
     "$$\n",
     "\n",
     "$$\n",
@@ -186,14 +191,230 @@
     "E = (SP - PV)\n",
     "$$\n",
     "\n",
-    "El corchete [ ] se usa para indicar saturación, es decir que si al evaluar el interior, resulta mayor de 100%, se deja en 100% y si resulta 0 o negativo, se deja en 0%.\n"
+    "El corchete [ ] se usa para indicar saturación, es decir que si al evaluar el interior, resulta mayor de 100%, se deja en 100% y si resulta 0 o negativo, se deja en 0%.\n",
+    "\n",
+    "Para los valores del ejemplo SP=200°C y Pb=10%, la potencia determinada por el control variará a lo largo 20°C por debajo del SP.\n",
+    "$$\n",
+    "banda = Pb * \\frac{SP}{100} = 10 *  \\frac{200 ^\\circ C }{ 100} = 20 ^\\circ C\n",
+    "$$\n",
+    "\n",
+    "Es decir que la banda a lo largo de la cual variará gradualmente la potencia será: 180°C...200°C.\n",
+    "\n",
+    "Por ejemplo si la temperatura del horno es igual o menor de 180°C, la salida de control (potencia) será 100%.\n",
+    "Cuando la temperatura esté en la mitad de la banda, es decir en 190°C la salida será 50% :\n",
+    "\n",
+    "$$\n",
+    "Out\\% = [100\\% * \\frac{E}{banda}] = 100\\% * \\frac{(200-190)}{20} = 50\\%\n",
+    "$$\n",
+    "\n",
+    "Al llegar la temperatura a 200 °C la salida será 0% :\n",
+    "\n",
+    "$$\n",
+    "Out\\% = [100\\% * \\frac{(200-200)}{20}] = 0\\%\n",
+    "$$\n",
+    "\n",
+    "En la siguiente *Tabla 1*:\n",
+    "\n",
+    "| PV [ºC] | Error (SP-PV)  [ºC] | Potencia 100% * E/20 [%] |\n",
+    "| :-----: | :-----------------: | :----------------------: |\n",
+    "|   210   |         -10         |            0             |\n",
+    "|   202   |         -2          |            0             |\n",
+    "|   200   |          0          |            0             |\n",
+    "|   199   |          1          |            5             |\n",
+    "|   198   |          2          |            10            |\n",
+    "|   195   |          5          |            25            |\n",
+    "|   190   |         10          |            50            |\n",
+    "|   185   |         15          |            75            |\n",
+    "|   182   |         18          |            90            |\n",
+    "|   181   |         19          |            95            |\n",
+    "|   180   |         20          |           100            |\n",
+    "|   170   |         30          |           100            |\n",
+    "|   110   |         90          |           100            |\n",
+    "\n",
+    "se observa la potencia de salida ( Out% ) suministrada por el controlador a distintas temperaturas para este ejemplo.\n",
+    "\n",
+    "En el siguiente gráfico de temperatura vs. tiempo se observa el comportamiento típico de un control proporcional."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "No es difícil imaginar un control On/Off como uno proporcional con Pb=0%, pues cuando la temperatura esta arriba del SP ( E < 0 ) la salida es 0% y cuando la temperatura esta abajo del SP ( E > 0 ) es 100%.\n",
+    "\n",
+    "#### Menor Pb hace más oscilatorio el sistema\n",
+    "Por lo tanto es importante tener presente que mientras menor sea la banda proporcional, el control proporcional se comportará más parecido al On/Off, es decir tenderá a presentar oscilaciones alrededor del SP.\n",
+    "#### Error estacionario\n",
+    "El control proporcional presenta el problema que la temperatura jamás se estabilizará justo en el valor del SP. En la práctica se estaciona siempre en un punto dentro de la banda proporcional, produciendo así el **error estacionario**.\n",
+    "\n",
+    "La razón es fácil de entender recurriendo a nuestro ejemplo. Supongamos que la temperatura se estacionara en 200 °C en forma estable y permanente, entonces la salida sería 0%.\n",
+    "\n",
+    "Pero siempre es necesario suministrarle al horno algo de potencia, al menos para compensar las pérdidas de calor al medio ambiente o calor contenido en el material que sale del horno.\n",
+    "\n",
+    "Es evidentemente imposible que el horno se mantenga a 200°C con los calefactores permanentemente apagados.\n",
+    "\n",
+    "Luego la temperatura tiene que descender un poco, lo suficiente para que la potencia suministrada por los calefactores sea igual a las pérdidas de energía del horno (energía que sale del horno).\n",
+    "\n",
+    "Supongamos que para nuestro horno las pérdidas son tales que hace falta 25% de la potencia de los calefactores para mantener la temperatura alrededor del SP. La temperatura se estacionará establemente a 195°C, pues para esa temperatura la salida es 25% (ver *Tabla 1*). Al valor del error en este punto, 5°C, se le llama **error estacionario**.\n",
+    "#### Al disminuir Pb se disminuye el error estacionario\n",
+    "El error estacionario se puede reducir disminuyendo la banda proporcional. Dejamos como tarea al lector, el analizar la razón.\n",
+    "Para ello puede usar nuestro ejemplo del horno pero con Pb = 5% y calcular a que temperatura el control entregará un 25% de potencia.\n",
+    "\n",
+    "Pero reducir mucho la banda propocional volverá oscilatorio nuestro sistema (más parecido a un On/Off), luego existe un límite inferior y siempre habrá algo de error estacionario.\n",
+    "\n",
+    "En particular en los hornos que poseen mucha inercia térmica (mucho tiempo de retardo) se pueden presentar oscilaciones de la temperatura que solamente se podrán eliminar aumentando la banda proporcional y con ella aumentará el error estacionario.\n",
+    "\n",
+    "Otro problema generado al aumentar la banda proporcional para eliminar las oscilaciones, es que el control pierde efectividad para responder rápidamente a perturbaciones externas (variaciones de la carga del horno, apertura de una puerta, etc.)\n",
+    "\n",
+    "Para mejorar la respuesta a transcientes del control se utiliza un control proporcional derivativo. \n",
+    "\n",
+    "#### Ganancia proporcional Kp\n",
+    "Las fórmulas anteriores de cálculo de Out%, banda y Error se pueden expresar de otro modo en términos de la ganancia proporcional como:\n",
+    "\n",
+    "$$\n",
+    "Out = [ Kp * E ]\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "Kp = \\frac{100\\%}{Pb * \\frac{SP}{100\\%} }\n",
+    "$$\n",
+    "\n",
+    "Donde la constante Kp se conoce como **ganancia proporcional** del control y es inversamente proporcional a Pb.\n",
+    "\n",
+    "En el control On/Off, Kp es muy grande, tiende a infinito.\n",
+    "\n",
+    "### Ejercicios:\n",
+    "\n",
+    "1. Un control proporcional tiene programado: SP=500 y Pb=5%. Si PV=490, ¿cuál será el valor de la salida de control? (Solución: Out=40% )\n",
+    "\n",
+    "2. Un control proporcional de temperatura tiene programado SP=300ºC y Pb=20%. ¿A qué temperatura la salida de control será del 50%?  (Solución PV=270ºC)\n",
+    "\n",
+    "3. Un horno con control proporcional de temperatura tiene programado: SP=800ºC y Pb=10%. El sistema está estable con una temperatura de 760ºC. \n",
+    "\n",
+    "   a) ¿Cuál es el error estacionario?\n",
+    "   b) Al colocar Pb=5%, ¿cuál será la temperatura aproximada a la que se estabilizará el horno?\n",
+    "\n",
+    "(Soluciones: a) 40ºC , b) 780ºC)\n",
+    "\n",
+    "\n",
     "## Control Proporcional Derivativo PD\n",
+    "Un control PD es uno proporcional al que se le agrega la capacidad de considerar también la velocidad de la temperatura en el tiempo.\n",
+    "De esta forma se puede \"adelantar\" la acción de control del mando de salida para obtener así una temperatura más estable.\n",
+    "\n",
+    "Si la temperatura esta por debajo del SP, pero subiendo muy rápidamente y se va a pasar de largo el SP, entonces el control se adelanta y disminuye la potencia de los calefactores.\n",
+    "\n",
+    "Y al contrario, si la temperatura es mayor que el SP, la salida debería ser 0% pero si el control estima que la temperatura baja muy rápido y se va pasar para abajo del SP, entonces le coloca algo de potencia a la salida para ir frenando el descenso brusco.\n",
+    "\n",
+    "La acción derivativa es llada a veces **rate action** por algunos fabricantes de controles porque considera la \"proporción de cambio\" de la temperatura.\n",
+    "\n",
+    "Para entender a fondo el control PD usaremos el mismo ejemplo anterior del horno pero agregamos ahora un nuevo parámetro llamado constante derivativa D, medido en segundos.\n",
+    "\n",
+    "Internamente el controlador realizará ahora el cálculo:\n",
+    "$$\n",
+    "Out = [ 100\\% * \\frac {E- D * Vel}{banda}]\n",
+    "$$\n",
+    "   \n",
+    "$$\n",
+    "banda = \\frac {Pb * SP}{100}\n",
+    "$$\n",
+    "\n",
+    "Donde *Vel* es la velocidad de la temperatura medida por el controlador, en ºC/seg\n",
+    "\n",
+    "Para este ejemplo fijamos D = 5 seg. y como antes SP=200 °C y Pb=10%.\n",
+    "\n",
+    "Supongamos que en un momento dado, la temperatura del horno es de 185°C y está subiendo a una velocidad Vel= 2 °C/Seg.\n",
+    "En un control proporcional la salida debería ser del 75%, como se puede ver a continuación:\n",
+    "\n",
+    "$$\n",
+    "Out = [100\\% * \\frac{E}{banda}] = 100\\% * \\frac {15^\\circ C}{20^\\circ C} = 75\\%\n",
+    "$$\n",
+    "\n",
+    "Pero en este caso el control PD toma en cuenta la velocidad de ascenso de la temperatura y la multiplica por la constante derivativa D y obtiene:\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "Out &= [100\\% * \\frac{E - D * Vel}{banda}] \\\\\n",
+    "&= [100\\% * \\frac{15^\\circ C - 5 seg * 2^\\circ C/seg}{banda}]\\\\ \n",
+    "&= [100\\% * \\frac{5^\\circ C }{20^\\circ C}]\\\\\n",
+    "&= 25\\%\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "entonces a pesar que la temperatura actual es 185 °C, la salida es 25% en vez de 75%, al considerar la velocidad de ascenso de la temperatura.\n",
+    "\n",
+    "La acción derivativa ocurre también fuera de la banda proporcional, en la *Tabla 2* se puede ver que para esta misma velocidad de ascenso de 2 °C/seg, la salida deja de ser 100% a partir de 170°C.\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "Out &= [100\\% * \\frac{E - D * Vel}{banda}] \\\\\n",
+    "&= [100\\% * \\frac{(200-170)^\\circ C - 5 seg * 2^\\circ C/seg}{20^\\circ C}]\\\\ \n",
+    "&= [100\\% * \\frac{30^\\circ C - 10^\\circ C}{20^\\circ C}]\\\\\n",
+    "&= [100\\% * \\frac{20^\\circ C}{20^\\circ C}]\\\\\n",
+    "&= 100\\%\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "De la misma forma si la temperatura está sobre 200 °C pero descendiendo rápidamente, (velocidad negativa) por ejemplo -1°C/seg, entonces el control activará antes y con mayor potencia la salida intentando que no baje de 200 °C.\n",
+    "\n",
+    "\n",
+    "\n",
+    "En la *Tabla 2* se observan las potencias a distintas temperaturas para 3 casos: control propocional, control PD con velocidad positiva y el mismo control PD con una velocidad negativa.\n",
+    "\n",
+    "El control PD permite obtener una temperatura muy estable, sin oscilaciones y sin necesidad de sacrificar la respuesta ante perturbaciones aumentando la banda proporcional.\n",
+    "\n",
+    "| PV (ºC) | P D =0 | PD D=5 seg, Vel= 2ºC/seg | PD D=5 seg, Vel = -1ºC/seg |\n",
+    "| :-----: | :----: | :----------------------: | :------------------------: |\n",
+    "|   204   |   0%   |            0%            |             5%             |\n",
+    "|   201   |   0%   |            0%            |            20%             |\n",
+    "|   200   |   0%   |            0%            |            25%             |\n",
+    "|   199   |   0%   |            0%            |            30%             |\n",
+    "|   198   |  10%   |            0%            |            35%             |\n",
+    "|   195   |  25%   |            0%            |            50%             |\n",
+    "|   190   |  50%   |            0%            |            75%             |\n",
+    "|   185   |  75%   |           25%            |            100%            |\n",
+    "|   182   |  90%   |           40%            |            100%            |\n",
+    "|   181   |  95%   |           45%            |            100%            |\n",
+    "|   180   |  100%  |           50%            |            100%            |\n",
+    "|   171   |  100%  |           95%            |            100%            |\n",
+    "|   170   |  100%  |           100%           |            100%            |\n",
+    "\n",
+    "\n",
+    "#### Ganancia derivativa\n",
+    "Dado que el error es E=SP -T, entonces la velocidad del error es:\n",
+    "$$\n",
+    "\\frac{\\mathrm{d}E }{\\mathrm{d} t}=\\frac{\\mathrm{d} (SP-T)}{\\mathrm{d} t}=-\\frac{\\mathrm{d}T }{\\mathrm{d} t}= - (velocidad\\,  de\\,  la\\,  temperatura)\n",
+    "$$\n",
+    "\n",
+    "Luego el cálculo para el control PD se puede escribir:\n",
+    "$$\n",
+    "Out = [100\\% * \\frac{(E+D*\\frac{\\mathrm{d} E}{\\mathrm{d} t} )}{ Pb* \\frac{SP}{100\\%}}]\n",
+    "$$\n",
+    "\n",
+    "La forma alternativa de la fórmula, en términos de ganancias, K, es:\n",
+    "$$\n",
+    "Out = Kp * E * Kd * \\frac{\\mathrm{d} E}{\\mathrm{d} t}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "Kp= \\frac {100\\%}{ \\frac {Pb*SP}{100\\%}} \n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "Kd= \\frac {100\\% * D}{ \\frac {Pb*SP}{100\\%}} \n",
+    "$$\n",
+    "\n",
+    "Omitiendo los corchetes [] para simplificar la fórmula, pero se entiende que puede ocurrir la saturación en el cálculo y debe considerarse.\n",
+    "\n",
+    "La constante Kd es la **ganancia derivativa**\n",
+    "\n",
     "\n",
     "## Control Proporcional Integral PI\n",
     "\n",
