corregida fórmula en calibración

--- a/spa/calibracion.ipynb
+++ b/spa/calibracion.ipynb
@@ -184,9 +184,9 @@
     "\n",
     "d) Calcular la incertidumbre combinada expandida para una probabilidad de cobertura de aproximadamente el 95% (U<sub>c</sub> ) aplicandola siguiente ecuación:\n",
     "$$\n",
-    "U_{C}=2x\\sqrt{s_{P}^{2}+s_{X}^{2} + 0,084*x*r_{P}^{2}  + 0,084*x*r_{X}^{2}  + 0,25*x*U_{P}^{2} }\n",
+    "U_{C}=2\\sqrt{s_{P}^{2}+s_{X}^{2} + 0,084*r_{P}^{2}  + 0,084*r_{X}^{2}  + 0,25*U_{P}^{2} }\n",
     "$$\n",
-    "siendo U<sub>P</sub> la incertidumbre del patrón\n",
+    "siendo U<sub>P</sub> la incertidumbre del patrón, r<sub>X</sub> la resolución de la medición de la calibración y r<sub>P</sub> la resolución de la medición del patrón (En el horno HPT-3000 que tenemos en el taller la resolución es de 0,1 en ambos casos)\n",
     "\n",
     "### Certificado\n",
     "\n",
@@ -200,6 +200,13 @@
     "- Valores calculados\n",
     "- Fecha y firma\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -218,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
