--- a/spa/calibracion.ipynb
+++ b/spa/calibracion.ipynb
@@ -176,17 +176,25 @@
     "a) Calcular la media (t<sub>P</sub> ) y (t<sub>X</sub> ). El valor medio del termómetro patrón (t<sub>P</sub> ) se ha de corregir por la desviación (si existe) indicada en el certificado.\n",
     "\n",
     "b) Calcular la desviación típica (s<sub>P</sub>) y (s<sub>X</sub> )\n",
-    "\n",
+    "Como recordatorio, esta es la fórmula de cálculo de la desviación típica: \n",
+    "$$\n",
+    "s=\\sqrt {\\frac {\\sum _{i=1}^{N}(x_{i}-{\\overline {x}})^{2}}{N-1}}\n",
+    "$$\n",
     "c) Calcular el error sitemático (ES) \n",
     "$$\n",
     "ES=t_{P} - t_{X}\n",
     "$$\n",
     "\n",
-    "d) Calcular la incertidumbre combinada expandida para una probabilidad de cobertura de aproximadamente el 95% (U<sub>c</sub> ) aplicandola siguiente ecuación:\n",
+    "d) Para cada temperatura, calcular la incertidumbre expandida para una probabilidad de cobertura de aproximadamente el 95% (U<sub>c</sub> ) aplicandola siguiente ecuación:\n",
     "$$\n",
     "U_{C}=2\\sqrt{s_{P}^{2}+s_{X}^{2} + 0,084*r_{P}^{2}  + 0,084*r_{X}^{2}  + 0,25*U_{P}^{2} }\n",
     "$$\n",
     "siendo U<sub>P</sub> la incertidumbre del patrón, r<sub>X</sub> la resolución de la medición de la calibración y r<sub>P</sub> la resolución de la medición del patrón (En el horno HPT-3000 que tenemos en el taller la resolución es de 0,1 en ambos casos)\n",
+    "\n",
+    "e) Calcular la incertidumbre combinada, incluyendo cada una de las incertidumbres del apartado anterior:\n",
+    "$$\n",
+    "U_{C}=\\sqrt{U_{1}^{2}+U_{2}^{2}.... }\n",
+    "$$\n",
     "\n",
     "### Certificado\n",
     "\n",
@@ -211,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -225,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
